samples/_failures_safe/1761325725_71577b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1527ec9.c: In function ‘main’:
./samples/SAFE/__tmp_e1527ec9.c:152:5: error: expected declaration or statement at end of input
  152 |     } else {
      |     ^
./samples/SAFE/__tmp_e1527ec9.c:152:5: error: expected declaration or statement at end of input
